# level-editor-starter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  FUTURE.md  GIZMO_COMMAND_INTEGRATION_PLAN.md  M2_P1-2.md  M2_P1.md  M2_P2.5.md  M2_P2.7.md  M2_P2.md  M2_P3.md  M2_P4.md  M2_P5.md  M2_P6.md  M2_P6_T1_STATUS.md  M2_P6_T2-4.md  M2_P6_T2-5.md  M2_P6_T2-6.md  M2_P6_T2-7.md  M2_P6_T2-8.md  M2_P7.md  M3_P7.md  MESH_RENDERING_MATERIAL_INSTANCE_MIGRATION.md  MIGRATION.md  MILESTONE_2.md  PHASE3_INTEGRATION_COMPLETE.md  PHASE_2.2_SUMMARY.md  PHASE_4.md  PLAN.md  PROGRESS_2.md  PROGRESS_3.md  README.md  RENDERER_RENAME_COMPLETE.md  SELECTION_RENDERER_MIGRATION_COMPLETE.md  T305_COMPLETE.md  T306_COMPLETE.md  base64-encoder.py  build.bat  compile_commands.json  (+13 more)
.github/: copilot-instructions.md
.github/instructions/: default.instructions.md
.github/prompts/: INSTRUCTIONS.prompt.md
.specify/memory/: constitution.md
assets/test/: cube-vert-col.gltf  cube.gltf  triangle.gltf  triangle_no_mat.gltf  triangle_textured_red.gltf  triangle_vertex_colors.gltf  triangle_with_texture.gltf  triangle_yellow.gltf
docs/: EDITOR_CONFIG_PROGRESS.md  GLTF_TEXTURE_SUPPORT_PLAN.md  MATERIAL_SYSTEM_INTEGRATION.md  README.md  REFLECTION_BASED_ROOT_SIGNATURE_PLAN.md  REFLECTION_IMPLEMENTATION_PROGRESS.md  REORGANIZATION_2025-10-15.md  T4.0_UI_Integration_Analysis.md  adding_objects_guide.md  editor_config.md  material_instance_plan.md  scene_format.md
docs/archive/: CONSOLE_MODULE.md  PROGRESS_2.md  PROGRESS_3.md  T304_COMPLETE.md
docs/migrations/: MATERIALINSTANCE_MIGRATION_CANDIDATES.md
docs/milestones/: M1_P4.md  M2_P1-2.md  M2_P1.md  M2_P2.md  M2_P3.md  M2_P6_T1_STATUS.md  M2_P6_T2-8.md  M3_P1_T1_PROGRESS.md
shaders/: common.hlsli  grid.hlsl  selection_outline.hlsl  selection_rect.hlsl  simple.hlsl  test_material_defines.hlsl  unlit.hlsl
specs/001-data-driven-material/: P1_COMPLETION_REPORT.md  P1_VALIDATION_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-data-driven-material/checklists/: requirements.md
specs/001-data-driven-material/contracts/: README.md
src/: README.md  main.cpp
src/core/: README.md  console.cpp  console.h  hash_utils.h  strings.cpp  strings.h  time.cpp  time.h
src/editor/: README.md  gizmos.cpp  gizmos.h  gizmos.ixx  scene_editor.cpp  scene_editor.ixx  selection.cpp  selection.h  selection.ixx  selection_renderer.cpp  selection_renderer.h  selection_renderer.ixx  transform_commands.cpp  transform_commands.h  ui.cpp  ui.h  ui.ixx  viewport.cpp  viewport.ixx  viewport_input.cpp  viewport_input.h  viewport_input.ixx
src/editor/asset_browser/: AssetBrowserPanel.cpp  AssetBrowserPanel.h
src/editor/commands/: Command.h  CommandContext.h  CommandHistory.cpp  CommandHistory.h  CommandProfiler.cpp  CommandProfiler.h  CommandUI.cpp  CommandUI.h  EcsCommands.cpp  EcsCommands.h  MacroCommand.h
src/editor/config/: EditorConfig.cpp  EditorConfig.h
src/editor/entity_inspector/: ComponentUI.cpp  ComponentUI.h  EntityInspectorPanel.cpp  EntityInspectorPanel.h
src/editor/scene_hierarchy/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/editor/viewport/: viewport.cpp  viewport.h  viewport.ixx
src/engine/: README.md  math.ixx  matrix.ixx  picking.cpp  picking.h  picking.ixx  quat.ixx  vec.ixx
src/engine/asset_gpu_buffers/: asset_gpu_buffers.cpp  asset_gpu_buffers.ixx
src/engine/assets/: asset_manager.cpp  asset_manager.h  asset_manager.ixx  assets.cpp  assets.h  assets.ixx
src/engine/camera/: camera.cpp  camera.h  camera.ixx  camera_controller.cpp  camera_controller.h  camera_controller.ixx
src/engine/gltf_loader/: gltf_loader.cpp  gltf_loader.h  gltf_loader.ixx
src/engine/gpu/: gpu_resource_manager.cpp  gpu_resource_manager.h  gpu_resource_manager.ixx  material_gpu.cpp  material_gpu.h  material_gpu.ixx  mesh_gpu.cpp  mesh_gpu.h  mesh_gpu.ixx
src/engine/gpu_resource_manager/: gpu_resource_manager.cpp  gpu_resource_manager.ixx
src/engine/grid/: grid.cpp  grid.h  grid.ixx
src/engine/integration/: asset_gltf_integration.h  asset_gltf_integration.ixx
src/engine/material_gpu/: material_gpu.cpp  material_gpu.ixx
src/engine/math/: README.md  animation.h  animation.ixx  bounding_box.ixx  bounding_box_2d.h  bounding_box_2d.ixx  bounding_box_3d.h  bounding_box_3d.ixx  bounding_sphere.h  bounding_sphere.ixx  bounding_volumes.h  bounding_volumes.ixx  color.ixx  curves.h  curves.ixx  frustum.h  math.h  (+18 more)
src/graphics/: README.md  graphics_context.cpp  graphics_context.h
src/math/: color.h  curves.h  matrix.h  quat.h
src/platform/: README.md
src/runtime/: README.md  app.h  app.ixx  components.h  components.ixx  console.cpp  console.h  console.ixx  ecs.h  ecs.ixx  entity.h  entity.ixx  mesh_rendering_system.cpp  mesh_rendering_system.h  mesh_rendering_system.ixx  scene_importer.cpp  scene_importer.h  scene_importer.ixx  systems.h  systems.ixx  time.cpp  time.h  time.ixx
src/strings/: strings.cpp
tests/: advanced_demo.cpp  animation_tests.cpp  app_tests.cpp  asset_browser_tests.cpp  asset_manager_tests.cpp  asset_rendering_integration_tests.cpp  asset_resolution_tests.cpp  assets_tests.cpp  bindless_texture_heap_tests.cpp  camera_controller_tests.cpp  camera_tests.cpp  color_tests.cpp  command_history_callback_tests.cpp  command_infrastructure_tests.cpp  command_integration_tests.cpp  command_performance_tests.cpp  command_ui_tests.cpp  components_tests.cpp  console_tests.cpp  curves_tests.cpp  device_tests.cpp  duplicate_entity_tests.cpp  dx12_tests.cpp  dx12_texture_loading_tests.cpp  ecs_command_tests.cpp  ecs_import_tests.cpp  ecs_tests.cpp  editor_command_tests.cpp  editor_config.json  editor_config_tests.cpp  entity_fixup_test.cpp  entity_inspector_tests.cpp  gizmo_command_integration_tests.cpp  gizmo_integration_tests.cpp  gizmo_keyboard_blocking_tests.cpp  gizmo_operation_switching_tests.cpp  gizmo_selection_integration_test.cpp  gizmos_tests.cpp  gltf_accessor_tests.cpp  gltf_loader_tests.cpp  (+75 more)
tests/test_assets/: DO_NOT_DELETE.txt  simple_triangle.gltf
(+74 files in other folders)
